// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SizeController + 버튼 렌더링 1`] = `
<div
  className="px-[54px] py-[18px] inline-block rounded-[14px] bg-purple-default hover:bg-purple-dark"
>
  <img
    alt="plus"
    className="w-[36px] h-[36px]"
    src="/images/plus.png"
  />
</div>
`;

exports[`SizeController - 버튼 렌더링 1`] = `
<div
  className="px-[54px] py-[18px] inline-block rounded-[14px] bg-purple-default hover:bg-purple-dark"
>
  <img
    alt="minus"
    className="w-[36px] h-[36px]"
    src="/images/minus.png"
  />
</div>
`;
